fixes content overlap between header/footer and body

--- a/PierresTreats/wwwroot/css/global.scss
+++ b/PierresTreats/wwwroot/css/global.scss
@@ -1,12 +1,14 @@
 body {
+  margin: 100px;
   header {
     width: 100%;
     position: fixed;
     height: 100px;
     margin: auto;
+    display: block;
     top: 0px;
     left: 0px;
-    background-color: #BFA4A4;
+    background-color: #E3B9BC;
   }
   
   footer {
@@ -16,6 +18,6 @@ body {
     margin: auto;
     bottom: 0px;
     left: 0px;
-    background-color: #BFA4A4;
+    background-color: #E3B9BC;
   }
 }
